--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NEXT_PUBLIC_API_URL=http://localhost:3000
 NODE_ENV=development
 
 # Секреты для аутентификации (например, JWT)
-JWT_SECRET=your-secure-jwt-secret-key
+JWT_SECRET=ARES
 
 YANDEX_EMAIL=ares-gd@yandex.ru
 YANDEX_PASSWORD=kylursrlgqdknggb
