--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fontkit": "^2.0.4",
     "heroicons": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.507.0",
     "mysql2": "^3.14.1",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -30,6 +31,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.56.0",
     "react-icons": "^5.5.0",
+    "sharp": "^0.34.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
