--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Базовые настройки Next.js
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://81.94.155.135:3000
 NODE_ENV=development
 
 # Секреты для аутентификации (например, JWT)
@@ -11,12 +11,12 @@ YANDEX_PASSWORD=kylursrlgqdknggb
 DB_HOST=localhost
 DB_NAME=albumen_development
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=aresgdaresgd
 
 NEXTAUTH_SECRET=ARES
 
-BASE_URL=http://localhost:3000
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+BASE_URL=http://81.94.155.135:3000
+NEXT_PUBLIC_BASE_URL=http://81.94.155.135:3000
 
 # Настройки для Next.js (например, предварительного рендеринга)
 NEXT_PUBLIC_ANALYTICS_ID=G-TLTHH4P8D7
