--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
+    "ansi-styles": "^6.2.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "fontkit": "^2.0.4",
     "heroicons": "^2.2.0",
+    "imask": "^7.6.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
     "mysql2": "^3.14.1",
@@ -32,6 +34,8 @@
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-imask": "^7.6.1",
+    "react-input-mask": "^2.0.4",
     "sharp": "^0.34.1",
     "uuid": "^11.1.0"
   },
