--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Базовые настройки Next.js
-NEXT_PUBLIC_API_URL=http://81.94.151.170:3000
+NEXT_PUBLIC_API_URL=https://www.albumen.ru
 NODE_ENV=development
 
 # Секреты для аутентификации (например, JWT)
@@ -10,13 +10,13 @@ YANDEX_PASSWORD=kylursrlgqdknggb
 
 DB_HOST=localhost
 DB_NAME=albumen_development
-DB_USER=albumen
-DB_PASSWORD=88224646
+DB_USER=root
+DB_PASSWORD=
 
 NEXTAUTH_SECRET=ARES
 
-BASE_URL=http://81.94.151.170:3000
-NEXT_PUBLIC_BASE_URL=http://81.94.151.170:3000
+BASE_URL=https://www.albumen.ru
+NEXT_PUBLIC_BASE_URL=https://www.albumen.ru
 
 # Настройки для Next.js (например, предварительного рендеринга)
 NEXT_PUBLIC_ANALYTICS_ID=G-TLTHH4P8D7
