--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ YANDEX_PASSWORD=kylursrlgqdknggb
 
 DB_HOST=localhost
 DB_NAME=albumen_development
-DB_USER=root
-DB_PASSWORD=
+DB_USER=albumen
+DB_PASSWORD=88224646
 
 NEXTAUTH_SECRET=ARES
 
