--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ansi-styles": "^6.2.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "fontkit": "^2.0.4",
